[package]
name = "allocator"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = { version = "0.2.16", optional = true }
serde = { version = "1.0.188", features = ["derive"], optional = true }
thiserror = { version = "1.0.49", optional = true }

[features]
seq = ["dep:num-traits", "dep:serde", "dep:thiserror"]
